# mgp

./: Doxyfile  Makefile.am  README.md  configure.in  makefile.ng  rules.make
etc/: Makefile.am  mgprinter.cfg  mgprinter.cfg.vxWorks
examples/: Makefile.am  pic.h  test_dlg.c  test_prn.c
filter/: Makefile.am
filter/bmp/: Makefile.am  rastertobmp.c
filter/epc65/: Makefile.am  epson.h  epson_i.h  print-color.c  print-dither-matrices.c  print-dither.c  print-dither.h  print-escp2-data.c  print-escp2.c  print-escp2.h  print-util.c  print-weave.c  quickmatrix257.h  ran.367.179.h  ran.509.131.h  rastertoepson.c
filter/hplj/: Makefile.am  rastertohp.c
include/: Makefile.am  common.h  makefile.ng  ppd.h  printing.h  raster.h
ppds/: Makefile.am  epson-c64.ppd  hp-laserjet.ppd
src/: Makefile.am  common.c  filters.h  image-colorspace.c  image-dc.c  image-zoom.c  image.c  image.h  imagetoraster.c  makefile.ng  nparser.c  nparser.h  portclib.c  portclib.h  ppd.c  printdlg.c  printing.c  raster.c
